--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,26 +1,11 @@
 @import 'colours';
 
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  margin-top: 5vh;
+  width: 70vw;
+  min-height: 500px;
+  min-width: 430px;
+  padding: 3.5%;
+  border: 1px solid $dark-grey;
+  color: $dark-grey;
 }
