--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,7 +1,19 @@
 @import 'normalize';
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+* {
+  box-sizing: border-box;
+}
+
+  ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+#root {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: nowrap;
+  align-items: center;
 }
