--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,8 +3,9 @@
 .App {
   margin-top: 5vh;
   width: 70vw;
-  min-height: 500px;
   min-width: 430px;
+  max-width: 900px;
+  min-height: 500px;
   padding: 3.5%;
   border: 1px solid $dark-grey;
   color: $dark-grey;
