update webpack prod config, minor visual adjustment

--- a/src/styles/_colours.scss
+++ b/src/styles/_colours.scss
@@ -3,3 +3,4 @@ $dark-grey: rgba(130, 130, 130, 1);
 $success: rgba(50, 221, 149, 1);
 $warning: rgba(246, 192, 125, 1);
 $primary: rgba(129, 190, 243, 1);
+$background: rgba(242, 242, 242, 1);
