--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import 'normalize';
+@import 'colours';
 
 * {
   box-sizing: border-box;
@@ -8,6 +9,10 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+body {
+  background-color: $background;
 }
 
 #root {
