--- a/src/styles/FavouritesItem.scss
+++ b/src/styles/FavouritesItem.scss
@@ -3,6 +3,11 @@
 .FavouritesItem {
   border-bottom: 1px solid $light-grey;
   padding: 20px 0 20px 0;
+
+  a {
+    text-decoration: none;
+    color: $primary;
+  }
 }
 
 .FavouritesItem__TextContent {
