--- a/src/styles/FavouritesSort.scss
+++ b/src/styles/FavouritesSort.scss
@@ -44,3 +44,27 @@
     background-image: none;
   }
 }
+
+// iphone 6
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2) { 
+
+  .FavouritesSort__Menu,
+  .FavouritesSort__Title {
+    display: block;
+    width: 100%;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 10px;
+
+    h3 {
+      text-align: left;
+      width: auto;
+      font-size: 1.3rem;
+    }
+
+  }
+
+}
